2000-04-10  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* users/3019: Completion/Core/_path_files: use special-dirs with
 	_path_files -g
	
	* 10614: Src/Modules/parameter.c: more careful with checking index
 	of $history
	
	* 10609: Src/Zle/compcore.c, Src/Zle/compresult.c, Src/Zle/zle_tricky.c:
 	fix for bashautolist+automenu
	
2000-04-09  Bart Schaefer  <schaefer@zsh.org>

	* 10606: Fix thinko in 10598.

	* 10602: Completion/Core/compinstall: Fix typo.

	* 10598: Completion/Builtins/_zstyle, Doc/Zsh/compsys.yo:
	Fix typo; reformat styles documentation for readability.

2000-04-09  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* Config/version.mk: 3.1.6-dev-22.

	* Completion/Core/compinstall, Doc/Zsh/compsys.yo:  rewrite
	of compinstall to set styles.  Most of this was already in
	3.1.6-dev-21.

2000-04-08  Bart Schaefer  <schaefer@zsh.org>

	* 10594: Functions/Prompts/prompt_bart_setup: Fix index into
	$history in prompt_bart_precmd.

	* 10591: Chmouel Boudjnah: Completion/User/_fakeroot: Completion
	for the fakeroot program.

	* 10590: Chmouel Boudjnah: Completion/Linux/_rpm: Signature
	checking completes only local package files.

2000-04-07  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 10584: Doc/Zsh/mod_stat.yo, Src/Modules/stat.c: -o shows
	numeric file modes in octal.

2000-04-07  Bart Schaefer <schaefer@zsh.org>

	* 10582: Src/exec.c: Apply STTY only to process group leaders.

	* 10581: Etc/BUGS, Src/Modules/zpty.c: Note a fixed bug; typo.

	* Chmouel Boudjnah: 10562: Completion/Linux/_rpm: Complete
	only .src.rpm files for "rpm --rebuild".

2000-04-07  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10579: Completion/Base/_arguments, Completion/Base/_values,
 	Completion/Core/_alternative: make sure caller-supplied
 	explanation takes precedence
	
	* 10575: Completion/User/_make: complete make targets of the form
 	`foo bar:'
	
	* 10573: Src/Zle/compmatch.c: cursor placed on wrong word part
 	with ** match spec
	